SERVER-37838 prevent crash with getMore and simultaneous stepdown